# c3po_frontend

./: CHANGES_SUMMARY.md  CHATBOT_DESIGN.md  MIGRATION_NOTES.md  README.md  TEST_MIGRATION.md  generate_node_display_figures.py  main.py  parse_reports.py  programs.json  pyproject.toml  server.py  test_fastmcp.py  tree.json
chat/: __init__.py  api.py  claude_client.py  config.py  fastmcp_client.py  mcp_client.py  session_manager.py  streaming.py
mcp/: README.md  __init__.py  config.py  server.py
static/css/: chat.css  style.css
static/js/: app.js  chat.js
templates/: index.html  login.html
