[project]
name = "hca-atlas-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.66.0",
    "asyncio>=4.0.0",
    "fastmcp>=2.12.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "mcp>=1.13.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "subprocess-run>=0.0.8",
]
